# warheads

./: .gitignore  Cargo.toml  README.md  headers2.json  schemanotes.py  schemas.txt  todo.md
constants/: Cargo.toml
constants/src/: lib.rs
corrections/: Cargo.toml
corrections/src/: correction.rs  correction_builder.rs  correction_loader.rs  corrections_serde.rs  corrector.rs  identify.rs  lib.rs  overwrite.rs
dapi/: Cargo.toml
dapi/src/: format.rs  gather.rs  hunting.rs  lib.rs  parse.rs  path_manager.rs  prefix.rs  rip.rs  store.rs  store_three.rs
format/: Cargo.toml
format/src/: language.rs  lib.rs  matchup.rs  path_manager.rs  season.rs  stat_path_formatter.rs
scripts/: leaguegamelog  nbapgs.sh
scripts/linux/python/: .gitignore  correct_date_format.py  date_test.py  pyproject.toml
scripts/linux/utils/: compact
scripts/macos/nba/: nbapgs.sh  nbatgs.sh  prepend_zeros.sh
scripts/nba/: nbapgs.sh  nbatgs.sh
services/: dockerfile  start_s3  stop_s3
src/: lib.rs  main.rs  scraper.rs
src/checksum/: checksum.rs  checksum_map.rs  generate.rs  mod.rs  read_checksum.rs  sign.rs  tests.rs  write_checksum.rs
src/constants/: constants.rs  header_manager.rs  mod.rs  paths.rs
src/corrections/: correction.rs  correction_builder.rs  correction_loader.rs  corrections_serde.rs  corrector.rs  identify.rs  mod.rs  overwrite.rs  serde_corrections.rs  test_correction.rs  tests.rs
src/dapi/: archive.rs  async_tests.rs  box_score_builder.rs  box_score_stat.rs  currency.rs  extract.rs  from_value.rs  gather.rs  historian.rs  hunting.rs  load.rs  map_reader.rs  mod.rs  parse.rs  player_box_score.rs  player_directory.rs  query.rs  read_disk.rs  revise.rs  rip.rs  season_manager.rs  stat_builder.rs  store.rs  store_disk.rs  team_box_score.rs  team_directory.rs  test_season_manager.rs  tests.rs  timeline.rs  timeline_manager.rs  verify.rs  write.rs  zip.rs
src/edit/: edit.rs  edit_builder.rs  edit_list.rs  edit_loader.rs  edit_serde.rs  editor.rs  mod.rs  ord.rs  overwrite.rs  tests.rs
src/format/: box_score_formatter.rs  evaluation.rs  extract.rs  game_object_formatter.rs  language.rs  matchup.rs  mod.rs  parse.rs  path_manager.rs  season.rs  space.rs  stat_path_formatter.rs  tests.rs  url_format.rs
src/ml/: cdf.rs  cost.rs  elo.rs  elo_params.rs  elo_tracker.rs  elo_writer.rs  gradient_descent.rs  linear_regression.rs  log_loss.rs  logisitic_regression.rs  matrix.rs  measurement.rs  mod.rs  model.rs  nelder_mead.rs  observation.rs  simplex.rs  training_set.rs  vector.rs
src/ml/elo/: elo.rs  elo_params.rs  elo_tracker.rs  elo_writer.rs  mod.rs
src/ml/elo/elo_models/: mod.rs  nelder_mead_elo.rs
src/ml/models/: last_n_games.rs  logistic_performance.rs  mod.rs  optimized_elo.rs  registration.rs  registry.rs  sigmachad.rs
src/ml/models/elo_models/: elo_tracker.rs  mod.rs  nelder_mead_elo.rs
src/models/: mod.rs  optimized_elo.rs
src/proc/: async_tests.rs  dispatch.rs  error.rs  forecast.rs  gather.rs  historian.rs  hunting.rs  mod.rs  predict.rs  prophet.rs  query.rs  refresher.rs  revise.rs  rip.rs  store.rs  tests.rs  timeline.rs
src/stats/: box_score.rs  chronology.rs  domain.rs  extract.rs  field_status.rs  game_data.rs  game_display.rs  game_info.rs  game_metadata.rs  game_obj.rs  gamecard.rs  id.rs  identity.rs  itemize.rs  mod.rs  nba_boxscore.rs  nba_kind.rs  nba_schema.rs  nba_stat.rs  percent.rs  player_box_score.rs  prediction.rs  record.rs  schema.rs  se.rs  season_period.rs  season_type.rs  shooting.rs  stat_column.rs  stat_value.rs  statify.rs  team_box_score.rs  teamcard.rs  tests.rs  types.rs  visiting.rs
src/storage/: client.rs  cloud.rs  mod.rs  read_disk.rs  store_disk.rs  store_three.rs  write.rs
src/tui/: game_ratings.rs  mod.rs  prompter.rs  tui_display.rs
src/types/: assists.rs  blocks.rs  elo.rs  fantasy_points.rs  field_goals.rs  free_throw.rs  game.rs  matchup.rs  minutes.rs  mod.rs  personal_fouls.rs  player.rs  plus_minus.rs  points.rs  rebounds.rs  season_id.rs  steals.rs  team.rs  tests.rs  three_pointers.rs  turnovers.rs
src/types/game/: game_date.rs  game_id.rs  game_result.rs
sss/: Cargo.toml
sss/src/: client.rs  lib.rs  store_three.rs
stats/: Cargo.toml
stats/src/: box_score.rs  extract.rs  format.rs  game_info.rs  id.rs  kind.rs  lib.rs  nba.rs  nba_kind.rs  nba_stat.rs  percent.rs  player_box_score.rs  se.rs  season_type.rs  stat_column.rs  stat_value.rs  statify.rs  team_box_score.rs  types.rs
tests/: mod.rs  test_correction.rs  test_serialize.rs  track_elo.rs  zip_dates.rs
tui/: Cargo.toml  README.md  main.py  pyproject.toml
tui/components/: controls.py  display.py  header.py  title.py  tui.py  user_auth.py
tui/fetch/: nba_requests.py
tui/src/: lib.rs  prompter.rs
tui/tests/: test_nba_requests.py
utils/src/: input.rs  lib.rs
