[package]
name = "warheads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }  # Async runtime
thirtyfour = "0.35"  # Selenium WebDriver library for Rust
serde_json = "1.0.133"
serde = { version = "1.0.217", features = ["derive"] }
dapi = { path = "dapi", version = "0.1.0" }
stats = { path = "stats", version = "0.1.0" }
sss = { path = "sss", version = "0.1.0" }
corrections = { path = "corrections", version = "0.1.0" }
