[package]
name = "warheads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }         # Async runtime
serde_json = "1.0.133"
serde = { version = "1.0.217", features = ["derive"] }
dotenv = "0.15.0"
once_cell = "1.20.2"
derivative = "2.2.0"
chrono = { version = "0.4.41", features = ["serde"] }
derive_builder = "0.20.2"
reqwest = "0.12.12"
indicatif = "0.17.11"
aws-config = "1.6.2"
aws-sdk-s3 = "1.83.0"
dialoguer = "0.11.0"
num = "0.4.3"
csv = "1.3.1"
thiserror = "2.0.17"

[dev-dependencies]
pretty_assertions = "1.4.1"
serde_json = {version = "1.0.133", features = ["preserve_order"] }
