[package]
name = "corrections"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
stats = { path = "../stats", version = "0.1.0"}
format = { path = "../format", version = "0.1.0" }

serde_json = "1.0.133"
chrono = "0.4.40"

dialoguer = "0.11.0"

tui = { path = "../tui", version = "0.1.0"}
serde_with = { version = "3.12.0", features = ["chrono"] }