[package]
name = "corrections"
version = "0.1.0"
edition = "2021"

[dependencies]
tui = { path = "../tui", version = "0.1.0"}
stats = { path = "../stats", version = "0.1.0"}
format = { path = "../format", version = "0.1.0" }
constants = { path = "../constants", version = "0.1.0" }

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.133"
serde_with = { version = "3.12.0", features = ["chrono"] }

chrono = "0.4.40"

dialoguer = "0.11.0"
once_cell = "1.20.2"

