[package]
name = "dapi"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
stats = { path="../stats", version = "0.1.0" }
time = { version = "0.3.37", features = ["macros", "formatting", "parsing"] }
serde_with = "3.12.0"
dotenv = "0.15.0"
once_cell = "1.20.2"
