[package]
name = "dapi"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
time = { version = "0.3.37", features = ["macros", "formatting", "parsing"] }
serde_with = "3.12.0"
dotenv = "0.15.0"
once_cell = "1.20.2"
stats = { path="../stats", version = "0.1.0" }
sss = { path="../sss", version = "0.1.0" }
chrono = "0.4.39"
indicatif = "0.17.11"
reqwest = "0.12.12"