[package]
name = "dapi"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.12.0"

corrections = { path = "../corrections", version = "0.1.0" }
constants = {  path = "../constants", version = "0.1.0" }
format = { path = "../format", version = "0.1.0" }
stats = { path = "../stats", version = "0.1.0" }
sss = { path = "../sss", version = "0.1.0" }

time = { version = "0.3.37", features = ["macros", "formatting", "parsing"] }
dotenv = "0.15.0"
once_cell = "1.20.2"
chrono = "0.4.40"
indicatif = "0.17.11"
reqwest = "0.12.12"
