[package]
name = "sss"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-s3 = "1.71.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
stats= { path="../stats", version = "0.1.0" }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
dotenv = "0.15.0"