[package]
name = "stats"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.133"

time = { version = "0.3.37", features = ["serde"] }

derive_builder = "0.20.2"
derivative = { version = "2.2.0"  }


format = { path = "../format", version = "0.1.0" }
chrono = "0.4.40"

